// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SearchIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.31 12.893l-3.44-3.438c.57-.844.905-1.86.905-2.955 0-2.913-2.362-5.274-5.274-5.274S1.227 3.586 1.227 6.5s2.362 5.273 5.274 5.273c1.095 0 2.11-.334 2.955-.904l3.44 3.437c.39.392 1.022.392 1.413 0 .39-.39.39-1.024 0-1.414zM2.423 6.5c0-2.247 1.83-4.076 4.076-4.076s4.076 1.83 4.076 4.076-1.83 4.076-4.076 4.076S2.424 8.746 2.424 6.5z"
  />
</Icon>
`;

exports[`SearchIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SearchIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.31 12.893l-3.44-3.438c.57-.844.905-1.86.905-2.955 0-2.913-2.362-5.274-5.274-5.274S1.227 3.586 1.227 6.5s2.362 5.273 5.274 5.273c1.095 0 2.11-.334 2.955-.904l3.44 3.437c.39.392 1.022.392 1.413 0 .39-.39.39-1.024 0-1.414zM2.423 6.5c0-2.247 1.83-4.076 4.076-4.076s4.076 1.83 4.076 4.076-1.83 4.076-4.076 4.076S2.424 8.746 2.424 6.5z"
  />
</Icon>
`;

exports[`SearchIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SearchIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.31 12.893l-3.44-3.438c.57-.844.905-1.86.905-2.955 0-2.913-2.362-5.274-5.274-5.274S1.227 3.586 1.227 6.5s2.362 5.273 5.274 5.273c1.095 0 2.11-.334 2.955-.904l3.44 3.437c.39.392 1.022.392 1.413 0 .39-.39.39-1.024 0-1.414zM2.423 6.5c0-2.247 1.83-4.076 4.076-4.076s4.076 1.83 4.076 4.076-1.83 4.076-4.076 4.076S2.424 8.746 2.424 6.5z"
  />
</Icon>
`;

exports[`SearchIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SearchIcon"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.31 12.893l-3.44-3.438c.57-.844.905-1.86.905-2.955 0-2.913-2.362-5.274-5.274-5.274S1.227 3.586 1.227 6.5s2.362 5.273 5.274 5.273c1.095 0 2.11-.334 2.955-.904l3.44 3.437c.39.392 1.022.392 1.413 0 .39-.39.39-1.024 0-1.414zM2.423 6.5c0-2.247 1.83-4.076 4.076-4.076s4.076 1.83 4.076 4.076-1.83 4.076-4.076 4.076S2.424 8.746 2.424 6.5z"
  />
</Icon>
`;

exports[`SearchIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SearchIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.31 12.893l-3.44-3.438c.57-.844.905-1.86.905-2.955 0-2.913-2.362-5.274-5.274-5.274S1.227 3.586 1.227 6.5s2.362 5.273 5.274 5.273c1.095 0 2.11-.334 2.955-.904l3.44 3.437c.39.392 1.022.392 1.413 0 .39-.39.39-1.024 0-1.414zM2.423 6.5c0-2.247 1.83-4.076 4.076-4.076s4.076 1.83 4.076 4.076-1.83 4.076-4.076 4.076S2.424 8.746 2.424 6.5z"
  />
</Icon>
`;

exports[`SearchIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SearchIcon"
  isBadge={true}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M14.31 12.893l-3.44-3.438c.57-.844.905-1.86.905-2.955 0-2.913-2.362-5.274-5.274-5.274S1.227 3.586 1.227 6.5s2.362 5.273 5.274 5.273c1.095 0 2.11-.334 2.955-.904l3.44 3.437c.39.392 1.022.392 1.413 0 .39-.39.39-1.024 0-1.414zM2.423 6.5c0-2.247 1.83-4.076 4.076-4.076s4.076 1.83 4.076 4.076-1.83 4.076-4.076 4.076S2.424 8.746 2.424 6.5z"
  />
</Icon>
`;
